test/programs/valid/literals_and_names/string_literals.java
protected class A {
  public A() {}
  protected String x = "foo";
}

