test/programs/invalid/constructors/instance_initializers.java
protected class A {
  public int x;
  { x = 42; }
}

